# tmva-tensorflow

./: .gitignore  CMakeLists.txt  README.md
apps/: blub.pb  graph.py  main.cc
cmake/: FindTensorflow.cmake
examples/: CMakeLists.txt  TMVAUsage.C
inc/: LinkDef.h  MethodTensorflow.h
include/: MethodTensorflow.h
src/: MethodTensorflow.cxx
